--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -35,6 +35,7 @@ body {
 }
 
 .container {
+    position: relative;
     max-width: 1160px;
     width: 100%;
     margin: 0 auto;
@@ -43,6 +44,7 @@ body {
 .page-header-logo {
     position: relative;
     top: -22px;
+    left: 4px;
     display: block;
     width: 145px;
     height: 36px;
@@ -54,13 +56,13 @@ body {
     opacity: 0.6;
 }
 
+.page-header-logo:focus-visible {
+    outline: 2px solid #af4fff;
+}
+
 .page-header-logo:active {
     opacity: 0.3;
     outline: none;
-}
-
-.page-header-logo:focus {
-    outline: 2px solid #af4fff;
 }
 
 .login-button {
@@ -71,14 +73,15 @@ body {
     opacity: 0.6;
 }
 
-.login-button:active {
-    opacity: 0.3;
-    border: none;
-}
-
-.login-button:focus {
+.login-button:focus-visible {
     outline: 2px solid #af4fff;
 }
+
+.login-button:active {
+    opacity: 0.3;
+    outline: none;
+}
+
 
 .login-icon {
     margin-right: 12px;
@@ -88,13 +91,13 @@ body {
     opacity: 0.6;
 }
 
-.compare:active {
-    opacity: 0.3;
+.compare:focus-visible {
+    outline: 2px solid #af4fff;
 }
 
-.compare:focus {
-    opacity: none;
-    border: 2px solid #af4fff;
+.compare:active {
+    opacity: 0.3;
+    outline: none;
 }
 
 .compare-icon {
@@ -105,13 +108,14 @@ body {
     opacity: 0.6;
 }
 
-.cart:active {
-    opacity: 0.3;
+.cart:focus-visible {
+    opacity: none;
+    outline: 2px solid #af4fff;
 }
 
-.cart:focus {
-    opacity: none;
-    border: 2px solid #af4fff;
+.cart:active {
+    opacity: 0.3;
+    outline: none;
 }
 
 .cart-icon {
@@ -135,6 +139,22 @@ body {
     min-height: 310px;
 }
 
+.header-decoration-text {
+    display: flex;
+    position: absolute;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 180px;
+    line-height: 30px;
+    color: #ffffff;
+    width: 100px;
+    height: 70px;
+    left: 904px;
+    right: 0;
+    top:83%
+}
+
 .header-wrapper-catalog {
     background-color: #ffe17f;
     margin-top: 50px;
@@ -155,7 +175,7 @@ body {
 .nav-wrapper-user {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin-top: 10px;
     align-items: center;
 }
 
@@ -164,18 +184,18 @@ body {
     flex-wrap: wrap;
     margin-top: 45px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-delivery-link:hover {
     opacity: 0.6;
-    border-bottom: 2px solid;
 }
 
 .nav-delivery-link:active {
     opacity: 0.3;
 }
 
-.nav-delivery-link:focus {
+.nav-delivery-link:focus-visible {
     opacity: none;
     outline: 2px solid #af4fff;
     padding: 0;
@@ -183,28 +203,26 @@ body {
 
 .nav-warranty-link:hover {
     opacity: 0.6;
-    border-bottom: 2px solid;
 }
 
 .nav-warranty-link:active {
     opacity: 0.3;
 }
 
-.nav-warranty-link:focus {
+.nav-warranty-link:focus-visible {
     opacity: none;
     outline: 2px solid #af4fff;
 }
 
 .nav-contacts-link:hover {
     opacity: 0.6;
-    border-bottom: 2px solid;
 }
 
 .nav-contacts-link:active {
     opacity: 0.3;
 }
 
-.nav-contacts-link:focus {
+.nav-contacts-link:focus-visible {
     opacity: none;
     outline: 2px solid #af4fff;
 }
@@ -244,8 +262,7 @@ body {
     opacity: 0.3;
 }
 
-.slider-button:focus {
-    opacity: none;
+.slider-button:focus-visible {
     outline: 2px solid #af4fff;
 }
 
@@ -289,7 +306,7 @@ body {
     opacity: 0.3;
 }
 
-.product-link:focus {
+.product-link:focus-visible {
     outline: 2px solid #af4fff;
 }
 
@@ -543,7 +560,7 @@ body {
     opacity: 0.3;
 }
 
-.footer-logo:focus {
+.footer-logo:focus-visible {
     outline: 2px solid #af4fff;
 }
 
@@ -613,6 +630,7 @@ body {
     align-self: center;
     color: #444444;
 }
+
 .social-link {
     padding: 13px;
 }
@@ -622,7 +640,7 @@ body {
     background-color: #ffc700;
 }
 
-.social-link:focus {
+.social-link:focus-visible {
     outline: 2px solid #af4fff;
 }
 
@@ -663,11 +681,12 @@ body {
 }
 
 .search-field {
+    position: relative;
     font-family: inherit;
     font-size: 16px;
     line-height: 20px;
-    padding: 15px 10px 12px 48px;
-    width: 310px;
+    padding: 15px 10px 12px 49px;
+    width: 305px;
     background-image: url(/images/search-icon.svg);
     background-repeat: no-repeat;
     background-color: #ffe17f;
@@ -677,22 +696,31 @@ body {
     margin-right: 2px;
 }
 
-.search-field:focus {
+.search-field:focus-visible {
     outline: 2px solid #af4fff;
+    z-index: 3;
+}
+
+.search-field:active {
+    color: #000000;
+    opacity: 1;
+    outline: none;
+    z-index: 3;
 }
 
 .search-label::after {
     box-sizing: border-box;
     position: absolute;
-    left: 7px;
+    left: 3px;
     top: 2px;
     bottom: 0;
     right: 0;
-    width: 360px;
+    width: 359px;
     height: 43px;
     content: "";
     border: 3px solid #000000;
     border-radius: 20px 0 0 20px;
+    z-index: 3;
 }
 
 
@@ -707,44 +735,57 @@ body {
     font-size: 16px;
     line-height: 20px;
     text-align: center;
-    padding: 14px 64px 14px 50px;
+    padding: 13px 56px;
     background-color: #ffe17f;
     outline: none;
     border: none;
     cursor: pointer;
-    z-index: 2;
-    
+    width: 168px;
+    bottom: 0;
+    right: 8px;
+    z-index: 1;
 }
 
+
 .button-text {
+    position: relative;
+    color: #000000;
+    z-index: 6;
+}
+
+.button-text:hover {
     color: rgba(255, 255, 255, 1);
-    z-index: 2;
+    z-index: 7;
 }
 
 .search-button::before {
     box-sizing: border-box;
     position: absolute;
-    left: 0;
     top: 2px;
     bottom: 0;
-    right: 0;
-    width: 160px;
+    right: 10px;
+    left: 4px;
+    width: 161px;
     height: 43px;
     content: "";
     border: 3px solid #000000;
+    border-left: none;
     border-radius: 0 20px 20px 0px;
     z-index: 1;
 }
 
 .search-button:hover::before {
     background-color: #000000;
-    z-index: 1;
+
 }
 
-.search-button:focus {
+.search-button:focus-visible {
     outline: 2px solid #af4fff;
 }
 
+.search-button:active {
+    outline: none;
+}
 
 .subscribe-field {
     font-family: 'Rubik';
@@ -791,7 +832,6 @@ body {
     text-transform: uppercase;
     list-style: none;
     margin: 0;
-    margin-left: 290px;
     padding: 0;
     color: #000000;
     text-decoration: none;
@@ -808,7 +848,8 @@ body {
 }
 
 .catalog-button {
-    position: relative;
+    display: flex;
+    align-items: center;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -817,14 +858,10 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-
     color: #000000;
-}
-
-.catalog-button .catalog-icon {
-    left: auto;
-    right: -70px;
-    margin: auto 0;
+    cursor: pointer;
+    background-color: #ffe17f;
+    border: none;
 }
 
 .catalog-icon {
@@ -832,23 +869,24 @@ body {
     opacity: 0.3;
     border: 3px solid;
     border-color: #000000 0.3;
-    border-radius: 30px;
+    border-radius: 50px;
     padding: 17px;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
+    margin-left: 7px;
 }
 
-.catalog-icon:hover {
+.catalog-button:hover .catalog-icon {
     color: #000000;
     border-color: #000000;
     opacity: 1;
 }
 
+.catalog-button:focus-visible {
+    outline: 2px solid #af4fff;
+}
+
+.header-catalog-wrapper:focus-visible {
+    outline: 2px solid #af4fff;
+}
 
 .slider-pagination {
     display: flex;
@@ -928,8 +966,6 @@ body {
     cursor: pointer;
     border: none;
 }
-
-
 
 .delivery-notice-text {
     margin-right: 80px;
@@ -1039,6 +1075,7 @@ body {
 }
 
 .subscribe-button {
+    position: relative;
     font-family: "Raleway";
     font-weight: 800;
     font-size: 18px;
@@ -1050,6 +1087,33 @@ body {
     border: 3px solid #c4c4c4;
     cursor: pointer;
 }
+
+.subscribe-button:focus-visible {   
+    outline: 2px solid #af4fff;
+    border: 3px solid #F0F0F0;
+}
+
+
+.subscribe-button:focus-visible:before {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 248px;
+    height: 58px;
+    content: "";
+    border: 3px solid #c4c4c4;
+}
+
+
+.subscribe-button:hover {
+    color: #ffffff;
+    background-color: #000000;
+}
+
+
 
 .page-footer {
     color: #ffffff;
@@ -1183,19 +1247,31 @@ body {
     background-color: #ffe17f;
 }
 
-.button-more:focus {
+.button-more:focus-visible {
     outline: 2px solid #af4fff;
 }
 
-
 .button-more:active::after {
-    background-color: #ffcc33;
     display: none;
+}
+
+.button-more:active {
+    background-color: #ffc700;
+}
+
+.button-more:disabled::after {
+    opacity: 0.3;
+}
+
+.button-more:disabled {
+    color: #000000;
+    opacity: 0.3;
+    background-color: #ffffff;
 }
 
 .more-text {
     position: relative;
-    z-index: 200;
+    z-index: 2;
 }
 
 .button-more::after {
@@ -1208,7 +1284,7 @@ body {
     height: 8px;
     background-color: #ffe17f;
     content: "";
-    z-index: 100;
+    z-index: 1;
 }
 
 
@@ -1501,13 +1577,26 @@ li.spec-item-radius {
     background-color: #ffe17f;
 }
 
-.more-about:focus {
+.more-about:focus-visible {
     outline: 2px solid #af4fff;
 }
 
 .more-about:active::after {
-    background-color: #ffcc33;
     display: none;
+}
+
+.more-about:active {
+    background-color: #ffc700;
+}
+
+.more-about:disabled::after {
+    opacity: 0.3;
+}
+
+.more-about:disabled {
+    color: #000000;
+    opacity: 0.3;
+    background-color: #ffffff;
 }
 
 .contact-us {
@@ -1558,14 +1647,28 @@ li.spec-item-radius {
     background-color: #ffe17f;
 }
 
-.contact-us:focus {
+.contact-us:focus-visible {
     outline: 2px solid #af4fff;
 }
 
 .contact-us:active::after {
-    background-color: #ffcc33;
     display: none;
 }
+
+.contact-us:active {
+    background-color: #ffc700;
+}
+
+.contact-us:disabled::after {
+    opacity: 0.3;
+}
+
+.contact-us:disabled {
+    color: #000000;
+    opacity: 0.3;
+    background-color: #ffffff;
+}
+
 
 .button-delivery {
     display: block;
@@ -1817,7 +1920,7 @@ li.spec-item-radius {
     opacity: 0.3;
 }
 
-.slider-pagination-button-current:focus {
+.slider-pagination-button-current:focus-visible {
     outline: 2px solid #af4fff;
 }
 
@@ -1829,7 +1932,7 @@ li.spec-item-radius {
     opacity: 0.3;
 }
 
-.slider-pagination-button:focus {
+.slider-pagination-button:focus-visible {
     outline: 2px solid #af4fff;
 }
 
